--- a/OAI_training_data_processing_for_KNOAP.ipynb
+++ b/OAI_training_data_processing_for_KNOAP.ipynb
@@ -24,8 +24,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split"
+    "import os"
    ]
   },
   {
