--- a/OAI_training_data_processing_for_KNOAP.ipynb
+++ b/OAI_training_data_processing_for_KNOAP.ipynb
@@ -268,6 +268,7 @@
     "    48 months: V06KPR30CV, V06KPL30CV\n",
     "    72 months: V08KPR30CV, V08KPL30CV\n",
     "    \"\"\"\n",
+    "    \n",
     "    for timepoint in timepoints:\n",
     "        clinical_data = pd.read_csv(os.path.join(data_path,\"AllClinical\"+timepoint+\".txt\"), sep=\"|\")\n",
     "        pain_variable_name = 'Pain'+timepoint\n",
@@ -285,8 +286,9 @@
     "        pain_l.insert(1,'SIDE',2) # create 'SIDE' variable and put 2 to left side knees\n",
     "        pain_l=pain_l.rename(columns={pain_variable_left:pain_variable_name})\n",
     "        pain = pd.concat([pain_r,pain_l])\n",
-    "        if timepoint in ['00','01']: # Harmonize pain coding, because it is coded differently for baseline (0 months) and 12-months data\n",
-    "            pain.loc[pain[pain_variable_name]=='0: No',pain_variable_name]=0 # can be just 0, not int(0)?\n",
+    "        # Harmonize pain coding, because it is coded differently for baseline (0 months) and 12-months data\n",
+    "        if timepoint in ['00','01']: \n",
+    "            pain.loc[pain[pain_variable_name]=='0: No',pain_variable_name]=0\n",
     "            pain.loc[pain[pain_variable_name]=='1: Yes',pain_variable_name]=1\n",
     "            pain.loc[(pain[pain_variable_name]==0)|(pain[pain_variable_name]==1)==False,pain_variable_name]='NaN'\n",
     "\n",
