--- a/OAI_training_data_processing_for_KNOAP.ipynb
+++ b/OAI_training_data_processing_for_KNOAP.ipynb
@@ -422,11 +422,7 @@
     "# Combine pain and osteophyte data in to one dataframe\n",
     "OAI_train = pd.merge(pain_data, OST_data, how='left', on=['ID','SIDE'],sort=True)\n",
     "\n",
-    "# create new ID in which the side is indicated\n",
-    "#OAI_train['SIDE_STR']=''\n",
-    "#OAI_train.loc[OAI_train['SIDE']==1,'SIDE_STR']='_R'\n",
-    "#OAI_train.loc[OAI_train['SIDE']==2,'SIDE_STR']='_L'\n",
-    "#OAI_train['Knee']=OAI_train['ID'].astype(str)+OAI_train['SIDE_STR']\n",
+    "# Combine ID and side\n",
     "OAI_train['Knee']=''\n",
     "OAI_train.loc[OAI_train['SIDE']==1,'Knee']=OAI_train['ID'].astype(str)+'_R'\n",
     "OAI_train.loc[OAI_train['SIDE']==2,'Knee']=OAI_train['ID'].astype(str)+'_L'\n",
