Added covariate extraction examples

--- a/OAI_training_data_processing_for_KNOAP.ipynb
+++ b/OAI_training_data_processing_for_KNOAP.ipynb
@@ -13,7 +13,9 @@
     "<br>\n",
     "To identify which knees will develop symptomatic radiographic knee osteoarthritis within the 72 months follow-up in the OAI data we need need to create an outcome variable. We will first create a variable to describe if the knee has or does not have a symptomatic knee osteoarthritis. For this we need:<br>\n",
     "- Osteophyte scores\n",
-    "- Symptoms assessed with the question: \"Did you experience symptoms in your knee most days in the past 30 days?\" (yes/no)."
+    "- Symptoms assessed with the question: \"Did you experience symptoms in your knee most days in the past 30 days?\" (yes/no).\n",
+    "\n",
+    "In addition to the outcome variable, this example shows how certain covariates could be extracted for the challenge."
    ]
   },
   {
@@ -367,6 +369,9 @@
     "    gender_l = demographics_data[['ID','P02SEX']].copy()\n",
     "    gender_l.insert(1,'SIDE',2)\n",
     "    gender = pd.concat([gender_r, gender_l])\n",
+    "    gender.loc[gender['P02SEX']=='1: Male','P02SEX']=1\n",
+    "    gender.loc[gender['P02SEX']=='2: Female','P02SEX']=2\n",
+    "    gender.loc[(gender['P02SEX']==1)|(gender['P02SEX']==2)==False,'P02SEX']='NaN'\n",
     "    \n",
     "    # get age and BMI data at baseline from the AllClinical00.txt file\n",
     "    clinical_data = pd.read_csv(os.path.join(OAI_data_path,\"AllClinical00.txt\"), sep=\"|\")\n",
@@ -378,6 +383,7 @@
     "    \n",
     "    demographics = pd.merge(age_BMI, gender, how='left', on=['ID','SIDE'],sort=True)\n",
     "    OAI_train = pd.merge(OAI_train, demographics, how='left', on=['ID','SIDE'],sort=True)\n",
+    "    OAI_train=OAI_train.rename(columns={'V00AGE':'Age','P01BMI':'BMI','P02SEX':'Gender'})\n",
     "    \n",
     "    return OAI_train"
    ]
@@ -385,6 +391,133 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_varus(OAI_data_path, OAI_train):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    OAI_data_path : OAI data path\n",
+    "    OAI_train : dataframe with the variables\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    OAI_train : dataframe \n",
+    "    \"\"\"    \n",
+    "    \n",
+    "    # get malaligment from the kXR_FTA_Duryea00.txt file\n",
+    "    FTA_data = pd.read_csv(os.path.join(OAI_data_path,\"kXR_FTA_Duryea00.txt\"), sep=\"|\")\n",
+    "    FTA = FTA_data[['ID','SIDE','V00FTANGLE']].copy()\n",
+    "    FTA['V00FTANGLE'] = FTA['V00FTANGLE']+4\n",
+    "    # As described in the publication by Iranpour-Boroujeni et al. (2014), FTA values have an offset\n",
+    "    # of 4 degrees when compared to the HKA values. When using HKA, varus is defined as <= -2 degrees.\n",
+    "    # Iranpour-Boroujeni T, Li J, Lynch J, Nevitt M, Duryea J. A new method to measure anatomic knee alignment for large studies of OA: data from the Osteoarthritis Initiative. \n",
+    "    # Osteoarthritis and Cartilage 2014 Oct; 22(10): 1668-1674 PMID: 25278076 http://dx.doi.org/10.1016/j.joca.2014.06.011\n",
+    "    FTA['Varus']='NaN'\n",
+    "    FTA.loc[(FTA['V00FTANGLE']>-2),'Varus']=0\n",
+    "    FTA.loc[(FTA['V00FTANGLE']<=-2),'Varus']=1\n",
+    "    OAI_train = pd.merge(OAI_train, FTA, how='left', on=['ID','SIDE'],sort=True)\n",
+    "    \n",
+    "    return OAI_train    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tenderness(OAI_data_path, OAI_train):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    OAI_data_path : OAI data path\n",
+    "    OAI_train : dataframe with the variables\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    OAI_train : dataframe \n",
+    "    \"\"\"    \n",
+    "\n",
+    "    Allclinical_data = pd.read_csv(os.path.join(OAI_data_path,\"AllClinical00.txt\"), sep=\"|\")    \n",
+    "    tenderness_r = Allclinical_data[['ID','V00RKLTTPN','V00RKMTTPN']].copy()\n",
+    "    tenderness_r=tenderness_r.rename(columns={'V00RKLTTPN':'Tenderness_lateral','V00RKMTTPN':'Tenderness_medial'})\n",
+    "    tenderness_r.insert(1,'SIDE',1)\n",
+    "    tenderness_l = Allclinical_data[['ID','V00LKLTTPN','V00LKMTTPN']].copy()\n",
+    "    tenderness_l=tenderness_l.rename(columns={'V00LKLTTPN':'Tenderness_lateral','V00LKMTTPN':'Tenderness_medial'})\n",
+    "    tenderness_l.insert(1,'SIDE',2)\n",
+    "    tenderness = pd.concat([tenderness_r, tenderness_l])\n",
+    "    tenderness['Tenderness']='NaN'\n",
+    "    tenderness.loc[(tenderness['Tenderness_lateral']=='0: No')&(tenderness['Tenderness_medial']=='0: No'),'Tenderness']=0\n",
+    "    tenderness.loc[(tenderness['Tenderness_lateral']=='1: Yes')|(tenderness['Tenderness_medial']=='1: Yes'),'Tenderness']=1    \n",
+    "\n",
+    "    OAI_train = pd.merge(OAI_train, tenderness[['ID','SIDE','Tenderness']], how='left', on=['ID','SIDE'],sort=True)\n",
+    "    \n",
+    "    return OAI_train    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_additional_covariates(OAI_data_path, OAI_train):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    OAI_data_path : OAI data path\n",
+    "    OAI_train : dataframe with the variables\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    OAI_train : dataframe \n",
+    "    \"\"\"    \n",
+    "    \n",
+    "    Allclinical_data = pd.read_csv(os.path.join(OAI_data_path,\"AllClinical00.txt\"), sep=\"|\")\n",
+    "    covariates_r = Allclinical_data[['ID','P01INJR','P01KPNR12','P02JBMP','V00RKPFCRE','V00WSRKN1','P01MENSTR']].copy()    \n",
+    "    covariates_l = Allclinical_data[['ID','P01INJL','P01KPNL12','P02JBMP','V00LKPFCRE','V00WSLKN1','P01MENSTR']].copy()    \n",
+    "    covariates_r.insert(1,'SIDE',1)\n",
+    "    covariates_l.insert(1,'SIDE',2)\n",
+    "    \n",
+    "    covariates_r=covariates_r.rename(columns={'P01INJR':'Injury_history','P01KPNR12':'Mild_symptoms','V00RKPFCRE':'Crepitus','V00WSRKN1':'Morning_stiffness','P02JBMP':'Heberden','P01MENSTR':'Postmeno'})\n",
+    "    covariates_l=covariates_l.rename(columns={'P01INJL':'Injury_history','P01KPNL12':'Mild_symptoms','V00LKPFCRE':'Crepitus','V00WSLKN1':'Morning_stiffness','P02JBMP':'Heberden','P01MENSTR':'Postmeno'})\n",
+    "\n",
+    "    covariates = pd.concat([covariates_r, covariates_l])\n",
+    "    \n",
+    "    covariates.loc[covariates['Injury_history']=='0: No','Injury_history']=0\n",
+    "    covariates.loc[covariates['Injury_history']=='1: Yes','Injury_history']=1\n",
+    "    covariates.loc[(covariates['Injury_history']==0)|(covariates['Injury_history']==1)==False,'Injury_history']='NaN'\n",
+    "\n",
+    "    covariates.loc[covariates['Mild_symptoms']=='0: No','Mild_symptoms']=0\n",
+    "    covariates.loc[covariates['Mild_symptoms']=='1: Yes','Mild_symptoms']=1\n",
+    "    covariates.loc[(covariates['Mild_symptoms']==0)|(covariates['Mild_symptoms']==1)==False,'Mild_symptoms']='NaN'\n",
+    "    \n",
+    "    covariates.loc[covariates['Heberden']=='0: No','Heberden']=0\n",
+    "    covariates.loc[covariates['Heberden']=='1: Yes','Heberden']=1\n",
+    "    covariates.loc[(covariates['Heberden']==0)|(covariates['Heberden']==1)==False,'Heberden']='NaN'\n",
+    "    \n",
+    "    covariates.loc[covariates['Crepitus']=='0: No','Crepitus']=0\n",
+    "    covariates.loc[covariates['Crepitus']=='1: Yes','Crepitus']=1\n",
+    "    covariates.loc[(covariates['Crepitus']==0)|(covariates['Crepitus']==1)==False,'Crepitus']='NaN'\n",
+    "\n",
+    "    covariates.loc[(covariates['Morning_stiffness']=='0: None')|(covariates['Morning_stiffness']=='1: Mild'),'Morning_stiffness']=0\n",
+    "    covariates.loc[(covariates['Morning_stiffness']=='2: Moderate')|(covariates['Morning_stiffness']=='3: Severe')|(covariates['Morning_stiffness']=='4: Extreme'),'Morning_stiffness']=1\n",
+    "    covariates.loc[(covariates['Morning_stiffness']==0)|(covariates['Morning_stiffness']==1)==False,'Morning_stiffness']='NaN'\n",
+    "\n",
+    "    covariates.loc[(covariates['Postmeno']=='1: Within the past 12 months'),'Postmeno']=0\n",
+    "    covariates.loc[(covariates['Postmeno']=='2: 1 to 2 years ago')|(covariates['Postmeno']=='3: 3 to 4 years ago')|(covariates['Postmeno']=='4: 5 or more years ago'),'Postmeno']=1\n",
+    "    covariates.loc[(covariates['Postmeno']==0)|(covariates['Postmeno']==1)==False,'Postmeno']='NaN'\n",
+    "     \n",
+    "    OAI_train = pd.merge(OAI_train, covariates, how='left', on=['ID','SIDE'],sort=True)\n",
+    "    \n",
+    "    return OAI_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -422,7 +555,7 @@
     "# Combine pain and osteophyte data in to one dataframe\n",
     "OAI_train = pd.merge(pain_data, OST_data, how='left', on=['ID','SIDE'],sort=True)\n",
     "\n",
-    "# Combine ID and side\n",
+    "# create new ID in which the side is indicated\n",
     "OAI_train['Knee']=''\n",
     "OAI_train.loc[OAI_train['SIDE']==1,'Knee']=OAI_train['ID'].astype(str)+'_R'\n",
     "OAI_train.loc[OAI_train['SIDE']==2,'Knee']=OAI_train['ID'].astype(str)+'_L'\n",
@@ -448,14 +581,17 @@
     "OAI_train.loc[(OAI_train['ACR00']==0)&(OAI_train['V00XRKL']<2)&((OAI_train['TKR_timepoint']=='1: 12-month')|(OAI_train['TKR_timepoint']=='3: 24-month')|(OAI_train['TKR_timepoint']=='5: 36-month')|(OAI_train['TKR_timepoint']=='6: 48-month')),'iSROA']=1\n",
     "print(\"{0} knees without iSROA and {1} knees with iSROA.\".format(len(OAI_train[OAI_train['iSROA']==0]),len(OAI_train[OAI_train['iSROA']==1])))\n",
     "\n",
-    "#TODO: Include the following variables:\n",
-    "# Varus malalignment, History of knee injury, Mild symptoms, Presence of Heberden nodes, \n",
-    "# Joint line tenderness, Crepitus, Morning stiffness, and Postmenopausal status"
+    "# get injury history, mild symptoms, heberden nodes, crepitus, morning stiffness, and postmenopausal status\n",
+    "OAI_train = get_additional_covariates(OAI_data_path, OAI_train)\n",
+    "# get joint line tenderness\n",
+    "OAI_train = get_tenderness(OAI_data_path, OAI_train)\n",
+    "# get varus malalignment\n",
+    "OAI_train = get_varus(OAI_data_path, OAI_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -467,20 +603,42 @@
     }
    ],
    "source": [
-    "OAI_gender_BMI_age_matched = OAI_train.loc[(OAI_train['P02SEX']=='2: Female')&(OAI_train['P01BMI']>=26.1)&(OAI_train['V00AGE']>=50)&(OAI_train['V00AGE']<=62)].copy()\n",
+    "OAI_train=OAI_train.rename(columns={'V00XRKL':'KL'})\n",
+    "OAI_gender_BMI_age_matched = OAI_train.loc[(OAI_train['Gender']==2)&(OAI_train['BMI']>=26.1)&(OAI_train['Age']>=50)&(OAI_train['Age']<=62)].copy()\n",
     "OAI_gender_BMI_age_matched = OAI_gender_BMI_age_matched.loc[OAI_gender_BMI_age_matched['iSROA']!='NaN'].copy()\n",
     "print(\"Gender, age, and BMI matched with the test set: {0} knees without iSROA and {1} knees with iSROA.\".format(len(OAI_gender_BMI_age_matched[OAI_gender_BMI_age_matched['iSROA']==0]),len(OAI_gender_BMI_age_matched[OAI_gender_BMI_age_matched['iSROA']==1])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save dataframes with covariates\n",
+    "OAI_train = OAI_train.replace('NaN', '', regex=True)\n",
+    "OAI_gender_BMI_age_matched = OAI_gender_BMI_age_matched.replace('NaN', '', regex=True)\n",
+    "OAI_train.to_csv('OAI_all_knees_data.csv', columns = ['Knee','Age','BMI','Gender','KL','Varus','Tenderness','Injury_history','Mild_symptoms','Heberden','Crepitus','Morning_stiffness','Postmeno','iSROA'], index=False)\n",
+    "OAI_gender_BMI_age_matched.to_csv('OAI_KNOAP_matched_data.csv', columns = ['Knee','Age','BMI','Gender','KL','Varus','Tenderness','Injury_history','Mild_symptoms','Heberden','Crepitus','Morning_stiffness','Postmeno','iSROA'], index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save outcome data\n",
     "OAI_train.to_csv('OAI_all_knees_outcome.csv', columns = ['Knee','iSROA'], index=False)\n",
     "OAI_gender_BMI_age_matched.to_csv('OAI_KNOAP_matched_outcome.csv', columns = ['Knee','iSROA'], index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
